--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   </head>
   
   <body>
-    
+    <div class="nav-bar"></div>
+
+    <div class="header">
+      <div class="text-container"></div>
+      <div class="image-container"></div>
+    </div>
+
+    <div class="content">
+      Some random information
+      <div class="content-containers">
+        <div class="content-card"></div>
+      </div>
+      <div class="quote-container"></div>
+      <div class="cta-container"></div>
+    </div>
+
+    <div class="footer">
+      Copyright: The Odin Project 2024
+    </div>
   </body>
 </html>
