--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   
   <body>
-    <div class="nav-bar"></div>
+    <div class="nav-bar">
+      <img id="LOGO" src="./Images/ferrari-logo.webp">
+    </div>
 
     <div class="header">
       <div class="text-container"></div>
