Feat: Add navbar link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="nav-bar">
       <img id="LOGO" src="./Images/ferrari-logo.webp">
+      <a class="nav-link" href="" rel="noreferrer" title="Home">Home</a>
+      <a class="nav-link" href="" rel="noreferrer" title="Cars">Cars</a>
+      <a class="nav-link" href="" rel="noreferrer" title="Sales">Sales</a>
     </div>
 
     <div class="header">
