Feat: Add image and change ID case

--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
   
   <body>
     <div class="nav-bar">
-      <img id="LOGO" src="./Images/ferrari-logo.webp">
+      <img id="logo" src="./Images/ferrari-logo.webp">
       <a class="nav-link" href="" rel="noreferrer" title="Home">Home</a>
       <a class="nav-link" href="" rel="noreferrer" title="Cars">Cars</a>
       <a class="nav-link" href="" rel="noreferrer" title="Sales">Sales</a>
     </div>
 
     <div class="header">
-      <div class="text-container"></div>
-      <div class="image-container"></div>
+      <div class="text-container">
+        <p class="hero">Fast. Elegant. Reliable.</p>
+        <p class="hero-sub">The all new, Ferrari. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam facilis ducimus et ullam laudantium eius, maiores dolor blanditiis odio.</p>
+        <button class="hero-btn">About</button>
+      </div>
+      <div class="image-container">
+        <img id="hero-img" src="./Images/ferrari-car.jpg" alt="Ferrari Car">
+      </div>
     </div>
 
     <div class="content">
