Docs: Add image sources

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <div class="content">
       Some random information
       <div class="content-containers">
-        <div class="content-card"></div>
+        <div class="content-card">
+          <img class="card-img" src="">
+        </div>
       </div>
       <div class="quote-container"></div>
       <div class="cta-container"></div>
