Feat: Add content image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       Some random information
       <div class="content-containers">
         <div class="content-card">
-          <img class="card-img" src="">
+          <img class="card-img" src="./Images/ferrari-wheel.jpg" alt="Ferrari Wheel">
+          <img class="card-img" src="./Images/ferrari-steeringwheel.jpg" alt="Ferrari Steering Wheel">
+          <img class="card-img" src="./Images/ferrari-helmet.jpg" alt="Ferrari Helmet">
+          <img class="card-img" src="./Images/ferrari-exhaust.jpg" alt="Ferrari Exhaust">
         </div>
       </div>
       <div class="quote-container"></div>
