Feat: Add content image text

--- a/index.html
+++ b/index.html
@@ -31,9 +31,19 @@
       <div class="content-containers">
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-wheel.jpg" alt="Ferrari Wheel">
+          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+        </div>
+        <div class="content-card">
           <img class="card-img" src="./Images/ferrari-steeringwheel.jpg" alt="Ferrari Steering Wheel">
+          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+        </div>
+        <div class="content-card">
           <img class="card-img" src="./Images/ferrari-helmet.jpg" alt="Ferrari Helmet">
+          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+        </div>
+        <div class="content-card">
           <img class="card-img" src="./Images/ferrari-exhaust.jpg" alt="Ferrari Exhaust">
+          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
       </div>
       <div class="quote-container"></div>
