Feat: Add content text & quote

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="content">
-      Some random information
+      The Classic Ferrari
       <div class="content-containers">
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-wheel.jpg" alt="Ferrari Wheel">
@@ -46,8 +46,15 @@
           <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
       </div>
-      <div class="quote-container"></div>
-      <div class="cta-container"></div>
+      <div class="quote-container">
+        <p id="quote">I married the 12 cylinder engine and I never divorced it.</p>
+        <p id="quote-ref">Enzo Ferrari</p>
+      </div>
+      <div class="cta-container">
+        <p class="cta-hero">Want to know more? Join our newsletter!</p>
+        <p class="cta-subhero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ex tenetur, nemo dolorum aut consectetur quam, officiis.</p>
+        <button class="cta-btn">Join</button>
+      </div>
     </div>
 
     <div class="footer">
