Stlye: Add flex on navbar & body padding

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <div class="nav-bar">
       <img id="logo" src="./Images/ferrari-logo.webp">
-      <a class="nav-link" href="" rel="noreferrer" title="Home">Home</a>
-      <a class="nav-link" href="" rel="noreferrer" title="Cars">Cars</a>
-      <a class="nav-link" href="" rel="noreferrer" title="Sales">Sales</a>
+      <div id="nav-links">
+        <a class="nav-link" href="" rel="noreferrer" title="Home">Home</a>
+        <a class="nav-link" href="" rel="noreferrer" title="Cars">Cars</a>
+        <a class="nav-link" href="" rel="noreferrer" title="Sales">Sales</a>
+      </div>
     </div>
 
     <div class="header">
