Style: Change content display and style

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 
     <div class="header">
       <div class="text-container">
-        <p class="hero">Fast. Elegant. Reliable.</p>
-        <p class="hero-sub">The all new, Ferrari. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam facilis ducimus et ullam laudantium eius, maiores dolor blanditiis odio.</p>
-        <button class="hero-btn">About</button>
+        <div class="hero-container">
+          <p class="hero"><em>F</em>ast.&nbsp;<em>E</em>legant.&nbsp;<em>R</em>eliable.</p>
+          <p class="hero-sub">The all new, Ferrari. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam facilis ducimus et ullam laudantium eius, maiores dolor blanditiis odio.</p>
+        </div>
+        <div class="btn-container">
+          <button class="hero-btn">About</button>
+        </div>
       </div>
       <div class="image-container">
         <img id="hero-img" src="./Images/ferrari-car.jpg" alt="Ferrari Car">
