Style: Header flex style & padding

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     </div>
 
     <div class="header">
-      <div class="text-container">
-        <div class="hero-container">
-          <p class="hero"><em>F</em>ast.&nbsp;<em>E</em>legant.&nbsp;<em>R</em>eliable.</p>
-          <p class="hero-sub">The all new, Ferrari. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam facilis ducimus et ullam laudantium eius, maiores dolor blanditiis odio.</p>
+      <div class="header-container">
+        <div class="header-hero-container">
+          <p class="header-hero"><em>F</em>ast.&nbsp;<em>E</em>legant.&nbsp;<em>R</em>eliable.</p>
+          <p class="header-subhero">The all new, Ferrari. "We are the Competition" reflects the company's focus on innovation, excellence, and pushing the boundaries of automotive engineering. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam facilis ducimus et ullam laudantium eius, maiores dolor blanditiis odio.</p>
         </div>
-        <div class="btn-container">
+        <div class="hero-btn-container">
           <button class="hero-btn">About</button>
         </div>
       </div>
+
       <div class="image-container">
-        <img id="hero-img" src="./Images/ferrari-car.jpg" alt="Ferrari Car">
+        <img class="hero-img" src="./Images/ferrari-car.jpg" alt="Ferrari Car">
       </div>
     </div>
 
