Style: Add content card flex style

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
 
     <div class="content">
-      The Classic Ferrari
-      <div class="content-containers">
+      <p>The Classic Ferrari</p>
+      <div class="content-container">
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-wheel.jpg" alt="Ferrari Wheel">
           <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
