Fix: Add img owner on img description

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
     </div>
 
     <div class="content">
-      <p>The Classic Ferrari</p>
+      <p id="content-hero">The Classic Ferrari</p>
       <div class="content-container">
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-wheel.jpg" alt="Ferrari Wheel">
-          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+          <p class="card-txt">This photo is by Luke Schobert from Unsplash! Thank you! Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-steeringwheel.jpg" alt="Ferrari Steering Wheel">
-          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+          <p class="card-txt">This photo is by Łukasz Nieścioruk from Unsplash! Thank you! Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-helmet.jpg" alt="Ferrari Helmet">
-          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+          <p class="card-txt">This photo is by Appic from Unsplash! Thank you! Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
         <div class="content-card">
           <img class="card-img" src="./Images/ferrari-exhaust.jpg" alt="Ferrari Exhaust">
-          <p class="card-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero dolor provident nesciunt a voluptatibus, delectus.</p>
+          <p class="card-txt">This photo is by Stephan Louis from Unsplash! Thank you! Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
       </div>
       <div class="quote-container">
