Style: Add CTA flex style

--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
           <p class="card-txt">This photo is by Stephan Louis from Unsplash! Thank you! Vero dolor provident nesciunt a voluptatibus, delectus.</p>
         </div>
       </div>
-      <div class="cta-container">
-        <p class="cta-hero">Want to know more? Join our newsletter!</p>
-        <p class="cta-subhero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ex tenetur, nemo dolorum aut consectetur quam, officiis.</p>
-        <button class="cta-btn">Join</button>
-      </div>
     </div>
+
+    <div class="cta-container">
+      <div id="cta-left">
+       <p class="cta-hero">Want to know more? Join our newsletter!</p>
+       <p class="cta-subhero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ex tenetur, nemo dolorum aut consectetur quam, officiis.</p>
+      </div>
+      <div id="cta-right">
+       <button class="cta-btn">Join</button>
+      </div>
+     </div>
 
     <div class="quote-container">
       <p id="quote">I married the 12 cylinder engine and I never divorced it.</p>
