--- a/index.html
+++ b/index.html
@@ -55,19 +55,21 @@
       </div>
     </div>
 
-    <div class="cta-container">
-      <div id="cta-left">
-       <p class="cta-hero">Want to know more? Join our newsletter!</p>
-       <p class="cta-subhero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ex tenetur, nemo dolorum aut consectetur quam, officiis.</p>
-      </div>
-      <div id="cta-right">
-       <button class="cta-btn">Join</button>
-      </div>
-     </div>
-
     <div class="quote-container">
       <p id="quote">I married the 12 cylinder engine and I never divorced it.</p>
       <p id="quote-ref">Enzo Ferrari</p>
+    </div>
+
+    <div class="container">
+      <div class="cta-container">
+        <div id="cta-left">
+         <p class="cta-hero">Want to know more? Join our newsletter!</p>
+         <p class="cta-subhero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ex tenetur, nemo dolorum aut consectetur quam, officiis.</p>
+        </div>
+        <div id="cta-right">
+         <button class="cta-btn">Join</button>
+        </div>
+       </div>
     </div>
 
     <div class="footer">
