Style: Add CTA in a div & add padding

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="quote-container">
       <p id="quote">I married the 12 cylinder engine and I never divorced it.</p>
-      <p id="quote-ref">Enzo Ferrari</p>
+      <p id="quote-ref"><em>Enzo Ferrari</em></p>
     </div>
 
     <div class="container">
@@ -73,7 +73,7 @@
     </div>
 
     <div class="footer">
-      Copyright: The Odin Project 2024
+      Copyright &COPY; The Odin Project 2024
     </div>
   </body>
 </html>
